* Added commander name to main form title.
* Added read and write settings to ini configuration file.
* Current settings saved on closing TD Helper.
* TD Helper now shows a message when loading the net logs.
* Running the Cmdr Profile will build an entry for every ship the commander owns.
* Currently selected ship is saved on exit and restored at next run.

v2.0.1.1
--------
* Remove hard coded file paths.
* Updated version omitted in error.

v2.0.1.0
--------
* Added edce integration to retrieve the commander's credit balance, the current ship cargo space and the ship cost.
* Added new settig for re-buy perentage.
* Set insurance value from the ship value and re-buy percentage.
* Removed EDAPI credentials from TD Helper as these are now stored in the EDCE ini file.

v2.0.0.1
--------
* Changed lsp number box to have one decimal place.

v2.0.0.0
--------
* Removed maddavo plugin calls and added calls to EDDBlink.
* Updated pilot's log to correctly parse the more recent net logs.

v1.0.7.7
--------
* Added a global hotkey for the Import button, and a section in the Misc. Settings panel to configure it (WIP)
* Added an option to copy the selected system name from the Pilot's Log into the EDDB panel (WIP)
* We now switch to the Station Editor panel if we are missing station details before importing a .prices file (WIP)
* We now encrypt the saved username, password, and authentication cookies used when importing via EDAPI (WIP)
* We now have native support for EDAPI instead of using TD's EDAPI plugin (WIP)
* We now require a source before activating the Towards checkbox
* Fixed the command dropdown tooltip for Buy/Sell
* Fixed a bug that prevented duplicates from being removed when joining lists in the Pilot's Log (WIP)
* Fixed a bug in the main worker delegate that caused Run to not pass "--to" if no "--fr" was set
* Fixed a bug that caused incorrect sorting of the recent systems list when cleaning duplicates in the dropdown

v1.0.7.6
--------