@@ -9,6 +9,7 @@ v2.0.2.0
 * TD Helper now shows a message when loading the net logs.
 * Running the Cmdr Profile will build an entry for every ship the commander owns.
 * Currently selected ship is saved on exit and restored at next run.
+* Visible ship type shown instead of internal ship type.
 
 v2.0.1.1
 --------
